--- a/config/locales/de.yml
+++ b/config/locales/de.yml
@@ -4,6 +4,6 @@ de:
       page_type_name: "Vorher/Naher"
   activerecord:
     attributes:
-      page:
+      pageflow/page:
         before_image_id: "Vorher-Bild"
         after_image_id: "Nachher-Bild"
